@@ -23,6 +23,7 @@
 				<arg choice='plain'>--daemon</arg>
 			</group>
 			<arg>-p <replaceable>port number</replaceable></arg>
+			<arg>-q</arg>
 			<arg>-v</arg>
 			<arg>--tls-keylog <replaceable>file</replaceable></arg>
 		</cmdsynopsis>
@@ -69,6 +70,18 @@
 				</listitem>
 			</varlistentry>
 			<varlistentry>
+				<term><option>-q</option></term>
+				<term><option>--quiet</option></term>
+				<listitem>
+					<para>Disable all logging. This is equivalent to setting
+						<option>log_type</option> to <option>none</option> in
+						the configuration file. This overrides any logging
+						options given in the configuration file and also
+						overrides <option>--verbose</option>.
+					</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
 				<term><option>--tls-keylog</option> <replaceable>file</replaceable></term>
 				<listitem>
 					<para>
@@ -91,7 +104,7 @@
 				<listitem>
 					<para>Use verbose logging. This is equivalent to setting
 						<option>log_type</option> to <option>all</option> in
-						the configuration file. This overrides and logging
+						the configuration file. This overrides any logging
 						options given in the configuration file.</para>
 				</listitem>
 			</varlistentry>
