@@ -274,7 +274,9 @@ static void config__init_reload(struct mosquitto__config *config)
 #else
 	config->log_facility = LOG_DAEMON;
 	config->log_dest = MQTT3_LOG_STDERR | MQTT3_LOG_DLT;
-	if(db.verbose){
+	if(db.quiet){
+		config->log_type = 0;
+	}else if(db.verbose){
 		config->log_type = UINT_MAX;
 	}else{
 		config->log_type = MOSQ_LOG_ERR | MOSQ_LOG_WARNING | MOSQ_LOG_NOTICE | MOSQ_LOG_INFO;
@@ -490,6 +492,8 @@ static void print_usage(void)
 	printf(" -h : display this help.\n");
 	printf(" -p : start the broker listening on the specified port.\n");
 	printf("      Not recommended in conjunction with the -c option.\n");
+	printf(" -q : quiet mode - disable all logging types. This overrides\n");
+	printf("      any logging options given in the config file, and -v.\n");
 	printf(" -v : verbose mode - enable all logging types. This overrides\n");
 	printf("      any logging options given in the config file.\n");
 	printf(" --test-config : test config file and exit\n");
@@ -558,6 +562,8 @@ int config__parse_args(struct mosquitto__config *config, int argc, char *argv[])
 			fprintf(stderr, "Error: TLS support not available so --tls-keylog is not available.\n");
 			return MOSQ_ERR_INVAL;
 #endif
+		}else if(!strcmp(argv[i], "-q") || !strcmp(argv[i], "--quiet")){
+			db.quiet = true;
 		}else if(!strcmp(argv[i], "-v") || !strcmp(argv[i], "--verbose")){
 			db.verbose = true;
 		}else if(!strcmp(argv[i], "--test-config")){
@@ -576,7 +582,9 @@ int config__parse_args(struct mosquitto__config *config, int argc, char *argv[])
 			return MOSQ_ERR_NOMEM;
 		}
 	}
-	if(db.verbose){
+	if(db.quiet){
+		config->log_type = 0;
+	}else if(db.verbose){
 		config->log_type = UINT_MAX;
 	}
 
@@ -791,7 +799,9 @@ int config__read(struct mosquitto__config *config, bool reload)
 	if(cr.log_dest_set){
 		config->log_dest = cr.log_dest;
 	}
-	if(db.verbose){
+	if(db.quiet){
+		config->log_type = 0;
+	}else if(db.verbose){
 		config->log_type = UINT_MAX;
 	}else if(cr.log_type_set){
 		config->log_type = cr.log_type;
