@@ -490,6 +490,7 @@ struct mosquitto_db{
 	unsigned long msg_store_bytes;
 	char *config_file;
 	struct mosquitto__config *config;
+	bool quiet;
 	bool verbose;
 #ifdef WITH_SYS_TREE
 	int subscription_count;
