@@ -73,6 +73,7 @@ Broker:
 - TLS v1.1 now not enabled by default. It is still possible to explicitly
   choose TLS v1.1, but this is not recommended and will be removed in a future
   version.
+- Add -q option to allow logging to be disabled at the command line.
 
 Plugins / plugin interface:
 - Add support for modifying outgoing messages using MOSQ_EVT_MESSAGE_OUT.
